# engineering-historical-signs-of-the-coming-of-christ

./: .gitignore  README.md  package.json
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  package.json  pyproject.toml
backend/api/: __init__.py  main.py
backend/config/: candidatos_seed.json  corpus_teologico_seed.json  feeds.yaml  profecias_baseline_seed.json
backend/docs/: README.md  REQUISITOS_CONTRIBUICAO.md  api-contrato.md  arquitetura.md  github-actions.md  model-providers.md  schemas-json.md  setup-supabase.md
backend/motor/: __init__.py  __main__.py  cli.py  config.py  logging_setup.py
backend/motor/adapters/: __init__.py  email_sender.py  groq.py  job_queue.py  llm_router.py  openrouter.py  redis_client.py  supabase.py
backend/motor/config/: spiritual_tone_weights.json
backend/motor/domain/: __init__.py  apocalyptic_signals.py  beasts.py  energies.py  false_leader.py  macro_micro.py  phase_transition.py  phases.py
backend/motor/math/: __init__.py  bayesian.py  hmm.py  mcda.py
backend/motor/ml/: __init__.py  gnn.py  graph.py  spiritual_tone.py  spiritual_tone_classifier.py
backend/motor/pipeline/: __init__.py  archive.py  data_drift.py  fulfillment_tracker.py  graph_service.py  historical_baseline.py  hybrid_analysis.py  newsletter_service.py  orchestrator.py  synthesis.py
backend/motor/schemas/: __init__.py  evento_estruturado.schema.json  ranking_candidato.schema.json  resultado_correlacao.schema.json  (+2 more)
backend/supabase/: config.toml
backend/tests/: conftest.py  test_api.py  test_apocalyptic_signals.py  test_bayesian.py  test_correlation_engine.py  test_dedup.py  test_domain_classifiers.py  test_false_leader.py  test_gnn.py  test_graph.py  test_historical_baseline.py  test_hmm.py  test_hybrid_analysis.py  test_llm_fallback.py  test_mcda.py  test_newsletter.py  test_orchestrator.py  test_orchestrator_rankings.py  test_phase_transition.py  test_preprocessing.py  test_prompts_v1.py  test_reports.py  test_schema_validator.py  test_spiritual_tone.py  test_spiritual_tone_classifier.py  test_synthesis.py
(+241 files in other folders)
