[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motor-escatologico"
version = "0.1.0"
description = "Motor de IA para Engenharia de Sinais Históricos da vinda de Cristo"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "supabase>=2.10.0",
    "redis>=5.2.0",
    "feedparser>=6.0.11",
    "beautifulsoup4>=4.12.0",
    "langdetect>=1.0.9",
    "jsonschema>=4.23.0",
    "structlog>=24.4.0",
    "tenacity>=9.0.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "numpy>=1.26.0",
    "scipy>=1.14.0",
    "networkx>=3.3",
    "jinja2>=3.1.0",
    "slowapi>=0.1.9",
    "PyYAML>=6.0.0",
    "groq>=0.11.0",
]

[project.optional-dependencies]
ml = [
    "sentence-transformers>=3.3.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "spacy>=3.7.0",
]
pdf = ["pymupdf>=1.24.0"]
ingest = ["pytrends>=4.9.0", "pytesseract>=0.3.10", "Pillow>=10.0.0"]
archive = ["pyarrow>=17.0.0"]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.0",
]

[project.scripts]
motor-cli = "motor.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["motor", "api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["motor", "api", "tests"]
exclude = [
    ".venv",
    "venv",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line length — handled by formatter
]

[tool.ruff.lint.isort]
known-first-party = ["motor", "api"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
